# jalog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  notes.md
.github/workflows/: bench.yml  build.yml
bench/: BenchSink.cpp  BenchSink.hpp  CMakeLists.txt  b-core.cpp  b-log-types.cpp  b-vs-spdlog.cpp  picobench-main.cpp  t-BenchSink.cpp
code/: CMakeLists.txt
code/jalog/: API.h  AsyncLogging.cpp  AsyncLogging.hpp  AsyncLoggingThread.hpp  BasicStream.hpp  CMakeLists.txt  DefaultLogger.cpp  DefaultLogger.hpp  DefaultScope.hpp  Entry.hpp  FmtPrint.hpp  Instance.cpp  Instance.hpp  Level.hpp  LevelString.hpp  Log.hpp  LogFmt.hpp  LogPrintf.hpp  LogStream.hpp  Logger.cpp  Logger.hpp  LoggerSetupDSL.hpp  Logging.hpp  NoopStream.hpp  PrintFlags.hpp  Printf.cpp  Printf.hpp  PrintfWrap.hpp  Scope.cpp  Scope.hpp  ScopeDesc.hpp  Severity.hpp  Sink.cpp  Sink.hpp  SinkPtr.hpp  Stream.hpp  StreamUnchecked.hpp  Writer.hpp  _q_char_alloc.hpp  _qwrite.cpp  (+4 more)
code/jalog/bits/: thread_name.cpp  thread_name.hpp
code/jalog/sinks/: AndroidSink.cpp  AndroidSink.hpp  AnsiColorSink.cpp  AnsiColorSink.hpp  NSLogSink.hpp  NSLogSink.mm  SimpleOStreamSink.hpp  SimpleSink.hpp  SimpleStdioSink.hpp  SimpleStreamSink.hpp  SinkFlags.hpp  TakeOwnership.hpp  WindowsColorSink.cpp  WindowsColorSink.hpp
doc/: async.md  basics.md  creating-scopes.md  features.md  how-to-add.md  logging.md
example/: CMakeLists.txt  e-AsyncLogging.cpp  e-BasicShowcase.cpp  e-CustomStyleLogging.cpp  e-HelloWorld.cpp  e-PrintfStyleLogging.cpp  e-StreamStyleLogging.cpp
ext/jalog/sinklib/: AnsiColorSink.cpp  AnsiColorSink.hpp  CMakeLists.txt  ColorSink.hpp  WindowsColorSink.cpp  WindowsColorSink.hpp
ext/jalog/sinks/: API.h  AndroidSink.cpp  AnsiColorSink.cpp  AnsiColorSink.hpp  CMakeLists.txt  ColorSink.hpp  DefaultSink.hpp  WindowsColorSink.cpp  WindowsColorSink.hpp
ext/sinklib/: CMakeLists.txt
ext/sinklib/jalog/sinks/: API.h  AndroidSink.hpp  AnsiColorSink.cpp  AnsiColorSink.hpp  NSLogSink.hpp  NSLogSink.mm  WindowsColorSink.cpp  WindowsColorSink.hpp
sandbox/: CMakeLists.txt  sandbox.cpp
scratch/: CMakeLists.txt  scratch.cpp
test/: CMakeLists.txt  TestSink.hpp  TestTime.hpp  t-core.cpp  t-defaults.cpp  t-mt.cpp  t-qwrite.cpp
